# SustainableConcrete

./: .flake8  .gitignore  AI_concrete_GitHubdata_prediction_demo.ipynb  CITATION  CONTRIBUTING.md  README.md  concrete_strength.csv  models.py  pyproject.toml  pytest.ini  utils.py
.github/workflows/: notebooks.yml  tests.yml
boxcrete/: __init__.py  models.py  plotting.py  utils.py
data/: BOxCrete_data.csv  Concrete_Strength_updated 10-10-23.csv  Concrete_Strength_updated_4-10-2023.csv  Concrete_Strength_updated_4-10-2023.numbers  Concrete_Strength_updated_4-25-2023.csv  Concrete_Strength_updated_5-17-2023.csv  Concrete_Strength_updated_6-7-2023.csv  Concrete_Strength_updated_9-12-2023.csv  Strength_updated_8-22-2023.csv  Strength_updated_9-12-2023.csv  boxcrete_data.csv  compressive_strength.csv  concrete_strength.csv  meta_cold_mortar_proposal_June2023.csv  meta_cold_mortar_proposal_September2023.csv  meta_concrete_proposal_jan2023.csv  meta_mortar_proposal_April2023.csv  meta_mortar_proposal_August2023.csv  meta_mortar_proposal_Feb2023.csv  meta_mortar_proposal_Jan2023.csv  meta_mortar_proposal_July2023.csv
notebooks/: [Concrete] Strength Curve Prediction Plots Demo.ipynb  prediction_and_optimization_tutorial.ipynb  slump_prediction_demo.ipynb  strength_curve_prediction_demo.ipynb  strength_model_tutorial.ipynb
test/: test_models.py  test_plotting.py  test_utils.py
